<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:textColor="#000000"
                android:gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:textSize="12sp"
                android:textColor="#000000"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/student_id"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:background="@drawable/view_border"
                android:textColor="#000000"
                android:gravity="center"
                android:autofillHints="no"
                android:hint="@string/student_id"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:background="@drawable/view_border"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="center"
                android:autofillHints="no"
                android:hint="@string/name"
                android:inputType="text" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/programme"
                android:background="@drawable/view_border"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="center"
                android:hint="@string/programme"
                android:entries="@array/programmes"
                tools:ignore="InefficientWeight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/sem_name"
                    android:background="@drawable/view_border"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:entries="@array/sem_names"
                    tools:ignore="InefficientWeight" />
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/academic_year"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/view_border"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:autofillHints="no"
                    android:hint="@string/academic_year"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/year"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/view_border"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:entries="@array/four_years"
                    tools:ignore="InefficientWeight" />
                <RadioGroup
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_group"
                    android:background="@drawable/view_border"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginEnd="22dp"
                    android:orientation="vertical"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:id="@+id/radio_button_1"
                        android:text="@string/sem_1"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:gravity="center" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:id="@+id/radio_button_2"
                        android:text="@string/sem_2"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:gravity="center" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/box"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginEnd="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginBottom="22dp"
                android:background="@drawable/view_border"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_1"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/text_view_1" />
                <LinearLayout
                    android:id="@+id/courses_box"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/view_border"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginEnd="22dp"
                android:layout_marginStart="22dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/submit" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reset"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>